--- a/app/src/main/res/layout/activity_fortune_require.xml
+++ b/app/src/main/res/layout/activity_fortune_require.xml
@@ -6,11 +6,12 @@
     android:orientation="vertical">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_fortune"
+        android:id="@+id/nav_fortune_require"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_fortune" />
+        app:navGraph="@navigation/nav_fortune_require" />
+
 
 </FrameLayout>
